# beast

./: CHANGELOG  CMakeLists.txt  TODO.txt
doc/: quickref.xml  websocket.qbk
examples/: CMakeLists.txt
include/beast/core/detail/: zcodec.hpp
include/beast/http/: rfc7230.hpp
include/beast/http/detail/: rfc7230.hpp
include/beast/http/impl/: rfc7230.ipp
include/beast/websocket/: option.hpp  stream.hpp
include/beast/websocket/detail/: frame.hpp  mask.hpp  stream_base.hpp  zistream.hpp  zostream.hpp  zstreams.hpp
include/beast/websocket/impl/: read_frame_op.ipp  stream.ipp  write_frame_op.ipp  write_op.ipp
test/: Jamfile
test/http/: CMakeLists.txt  basic_uri_parser.cpp  rfc7230.cpp
test/websocket/: CMakeLists.txt  stream.cpp
test/websocket/detail/: frame.cpp
